[package]
name = "visualize_calibration_report"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
csv = "1.3"
egui = "0.32"
eframe = "0.32"
egui_plot = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
rfd = "0.15"
image = "0.25"
plotters = "0.3"
plotters-bitmap = "0.3"
