[package]
name = "visualize_calibration_report"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
egui = "0.34.1"
eframe = "0.34.1"
egui_plot = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.10"
rfd = "0.17.2"
image = "0.25.10"
plotters = "0.3"
plotters-bitmap = "0.3"
